--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         </activity>
 
         <activity android:name=".GameActivity"
-            android:parentActivityName="com.example.helder.chessapp.MainActivity" >
+            android:parentActivityName="com.example.helder.chessapp.MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.helder.chessapp.MainActivity" />
